<resources>
    <string name="app_name">manageTournamentApp</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="created_tournaments">My Tournaments</string>
    <string name="participating_teams">Participating Teams</string>
    <string name="joined_teams">Joined Teams</string>
    <string name="participating_tournaments">Participating Tournaments</string>
    <string name="invite_players">Invite Player</string>

    <!-- Strings used for fragments for navigation -->
    <string name="player_info">Player Info</string>
    <string name="edit_player">Edit</string>
    <string name="delete_player">Delete</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="add_new_item">Add</string>

    <string name="round_1">Round 1</string>
    <string name="round_2">Round 2</string>
    <string name="round_3">Round 3</string>
    <string name="round_4">Round 4</string>
    <string name="round_5">Round 5</string>

    <string name="date">Date</string>
    <string name="teamA">team A</string>
    <string name="teamB">team B</string>
    <string name="scoreA">score A</string>
    <string name="scoreB">score B</string>

    <string name="groupA">Group A</string>
    <string name="groupB">Group B</string>
    <string name="groupC">Group C</string>
    <string name="groupD">Group D</string>
    <string name="groupE">Group E</string>
    <string name="groupF">Group F</string>
    <string name="groupG">Group G</string>
    <string name="groupH">Group H</string>


    <string name="organizer_info">Organizer Info</string>
    <string name="delete_organizer">Delete</string>
    <string name="edit_organizer">Edit</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="search">Αναζήτηση</string>
    <string name="app_title_name">Manage Tournament App</string>
    <string name="diorganoseis">Οι Διοργανώσεις Μου</string>
    <string name="title_activity_organizer_page">Organizer Profile</string>
    <string name="prof_omadas">Team Profile</string>
    <string name="player">Player Profile</string>
    <string name="manageApp">Manage Tournament App</string>
    <string name="tournament_prof">Tournament Profile</string>
    <string name="account">Account</string>
    <string name="account_Details">Organizer Info</string>
    <string name="tournament_info">Tournament Info</string>
    <string name="create_tournament">Create Tournament</string>
    <string name="set_dates">Set Dates Tournament</string>
    <string name="groups">Round Groups</string>
    <string name="on16">Tournament 16</string>
    <string name="on8">Tournament 8</string>
    <string name="rounds">Tournament Rounds</string>
    <string name="semifinal">SemiFinal</string>
    <string name="finalRound">Final</string>
    <string name="team_details">Team Info</string>
    <string name="join_tournament">Join Tournament</string>
    <string name="register_player">Player Registration</string>
    <string name="register_organizer">Organizer Registration</string>
    <string name="log_in">Log In Info</string>
    <string name="joined_players">Joined Players</string>
    <string name="create_team"> Create Team</string>
    <string name="dash">-</string>
    <string name="games">Games</string>
    <string name="rankings">Rankings</string>
    <string name="score_a">Score A</string>
    <string name="score_b">Score B</string>
    <string name="save">Save</string>
    <string name="enter_score">Enter the final score:</string>
    <string name="welcome">Welcome!</string>
    <string name="browse">Browse</string>
    <string name="connect">Connect</string>
    <string name="browse_tourn">Check out all tournaments!</string>
    <string name="team_name">Team name</string>
    <string name="team_color">Team color</string>
    <string name="sport">Sport</string>
    <string name="save_team">SAVE</string>
    <string name="location">Location</string>
    <string name="description">Description</string>
    <string name="teams_number">Teams Number</string>
    <string name="start_date">Start Date</string>
    <string name="finish_date">Finish Date</string>
    <string name="sport_type">Sport Type</string>
    <string name="age_division">Age Division</string>
    <string name="bottom_gravity">Bottom Gravity</string>
    <string name="bottom_gravity">Bottom Gravity</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="phone_number">Phone number</string>
    <string name="email">Email</string>
    <string name="title">Title</string>
    <string name="birth_date">Birth Date</string>
    <string name="name_organizer">NAME</string>
    <string name="account_organizer">ACCOUNT</string>
    <string name="my_tournaments">MY TOURNAMENTS</string>
    <string name="log_out">LOG OUT</string>
    <string name="bottom_gravity">Bottom Gravity</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="phone_number">Phone number</string>
    <string name="email">Email</string>
    <string name="location">Location</string>
    <string name="birth_date">Birth Date</string>
    <string name="name_player">NAME</string>
    <string name="account_player">ACCOUNT</string>
    <string name="my_teams">MY TEAMS</string>
    <string name="my_invites">MY INVITES</string>
    <string name="log_out">LOG OUT</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="phone_number_organizer">Phone Number</string>
    <string name="e_mail">E-mail</string>
    <string name="birth_date">Birth Date</string>
    <string name="title">Title</string>
    <string name="save_organizer">SAVE</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="phone_number_player">Phone Number</string>
    <string name="e_mail">E-mail</string>
    <string name="location">Location</string>
    <string name="birth_date">Birth Date</string>
    <string name="select_your_sport">Select your Sport!</string>
    <string name="basketball3v3">Basketball3v3</string>
    <string name="basketball5v5">Basketball5v5</string>
    <string name="football5v5">Football5v5</string>
    <string name="football7v7">Football7v7</string>
    <string name="volleyball3v3">Volleyball3v3</string>
    <string name="volleyball6v6">Volleyball6v6</string>
    <string name="save_player">SAVE</string>
    <string name="nothing" />
    <string name="start_date">Start Date</string>
    <string name="finish_date">Finish Date</string>
    <string name="save_dates">SAVE</string>
    <string name="bottom_gravity">Bottom Gravity</string>
    <string name="nothing" />
    <string name="start_date">Start Date</string>
    <string name="finish_date">Finish Date</string>
    <string name="bottom_gravity">Bottom Gravity</string>
    <string name="nothing" />
    <string name="start_date">Start Date</string>
    <string name="finish_date">Finish Date</string>
    <string name="save_datse">SAVE</string>
    <string name="bottom_gravity">Bottom Gravity</string>
    <string name="team_name_info">Team Name</string>
    <string name="colors">Colors</string>
    <string name="sport">Sport</string>
    <string name="age_division">Age Division</string>
    <string name="title_team">TITLE</string>
    <string name="info">INFO</string>
    <string name="players">PLAYERS</string>
    <string name="participations">PARTICIPATIONS</string>
    <string name="bottom_gravity">Bottom Gravity</string>
    <string name="bottom_gravity">Bottom Gravity</string>
    <string name="title">Title</string>
    <string name="location">Location</string>
    <string name="description">Description</string>
    <string name="teams_number">Teams Number</string>
    <string name="start_date">Start Date</string>
    <string name="finish_date">Finish Date</string>
    <string name="sport_type">Sport Type</string>
    <string name="age_division">Age Division</string>
    <string name="title_tournament">TITLE</string>
    <string name="info_tournament">Info</string>
    <string name="teams">Teams</string>
    <string name="rounds_tournament">Rounds</string>
    <string name="bottom_gravity">Bottom Gravity</string>
    <string name="groups_round">Groups Round</string>
    <string name="round_of_16">Round of 16</string>
    <string name="round_of_8">Round of 8</string>
    <string name="semifinals">Semifinals</string>
    <string name="final">Final</string>
    <string name="final">Final</string>
    <string name="bottom_gravity">Bottom Gravity</string>
    <string name="onoma_omadas">Όνομα ομάδας</string>
    <string name="onoma_paikti">Όνομα παίκτη</string>
    <string name="epitheto_paikti">Επίθετο παίκτη</string>
    <string name="imerominia">Ημ. γέννησης παίκτη</string>
    <string name="perioxh">Περιοχή παίκτη</string>
    <string name="onoma_omadas">Όνομα ομάδας</string>
    <string name="titlos">Τίτλος διοργάνωσης</string>
    <string name="invite">INVITE</string>
    <string name="info">INFO</string>
    <string name="invitation">Invitation</string>
    <string name="decline">DECLINE</string>
    <string name="accept">ACCEPT</string>
    <string name="team_page">TEAM PAGE</string>
    <string name="player_action">Player Action</string>
    <string name="remove">REMOVE</string>
    <string name="info">INFO</string>
    <string name="player_action">Player Action</string>
    <string name="no">NO</string>
    <string name="yes">YES</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="choose_an_action">Choose an action</string>
    <string name="organizer">ORGANIZER</string>
    <string name="player_click">PLAYER</string>
    <string name="no">NO</string>
    <string name="yes">YES</string>
    <string name="error">Error!</string>
    <string name="ok">OK</string>
</resources>