<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appColor"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text_tournament_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_tournament"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="28sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="5dp">

        <Button
            android:id="@+id/tournament_info_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textColor="@color/white"
            android:text="@string/info_tournament">

        </Button>

        <Button
            android:id="@+id/tournament_teams_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textColor="@color/white"
            android:text="@string/teams">

        </Button>

        <Button
            android:id="@+id/tournament_games_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textColor="@color/white"
            android:text="@string/rounds_tournament">

        </Button>
    </LinearLayout>
    <FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="bottom">

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bottom_gravity"
                app:srcCompat="@drawable/ic_baseline_home_24"/>

        </RelativeLayout>
    </FrameLayout>
</LinearLayout>

