<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appColor"
    android:orientation="vertical">


    <TextView
        android:id="@+id/action_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_score"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="28sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="595dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="5dp">

        <EditText
            android:id="@+id/txt_scoreA"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/score_a"
            android:inputType="number" />

        <EditText
            android:id="@+id/txt_scoreB"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/score_b"
            android:inputType="number" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="595dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="5dp">
        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/save"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>