<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/appColor"
    android:fillViewport="true">

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:paddingTop="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="0dp"
        android:focusable="true"
        android:focusableInTouchMode="true" >

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:gravity="center">

            <TextView
                android:text="@string/team_name_info"
                android:layout_width="0dp"
                android:layout_weight="0.75"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textSize="16dp"
                android:paddingRight="20dp"/>

            <TextView
                android:id="@+id/team_name"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textSize="16dp"
                android:paddingRight="20dp"/>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:gravity="center">

            <TextView
                android:text="@string/colors"
                android:layout_width="0dp"
                android:layout_weight="0.75"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textSize="16dp"
                android:paddingRight="20dp"/>

            <TextView
                android:id="@+id/team_colors"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textSize="16dp"
                android:paddingRight="20dp"/>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:gravity="center">

            <TextView
                android:text="@string/sport"
                android:layout_width="0dp"
                android:layout_weight="0.75"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textSize="16dp"
                android:paddingRight="20dp"/>

            <TextView
                android:id="@+id/sport_type"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textSize="16dp"
                android:paddingRight="20dp"/>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:gravity="center">

            <TextView
                android:text="@string/age_division"
                android:layout_width="0dp"
                android:layout_weight="0.75"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textSize="16dp"
                android:paddingRight="20dp"/>

            <TextView
                android:id="@+id/age_division"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textSize="16dp"
                android:paddingRight="20dp"/>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="2dp"
            android:paddingBottom="32dp"
            android:gravity="center">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/delete_team_button"
                    android:text="@string/delete_player"
                    android:textAllCaps="false"
                    android:layout_width="140dp"
                    android:layout_height="55dp"
                    android:textColor="@color/white"
                    android:layout_marginRight="10dp"
                    android:textSize="15dp"/>

                <Button
                    android:id="@+id/edit_team_button"
                    android:text="@string/edit_player"
                    android:textAllCaps="false"
                    android:layout_width="140dp"
                    android:layout_height="55dp"
                    android:textColor="@color/white"
                    android:textSize="15dp"
                    android:layout_toRightOf="@+id/delete_team_button"/>

            </RelativeLayout>

        </TableRow>



    </TableLayout>

</ScrollView>
